--- a/register-client/pom.xml
+++ b/register-client/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.albusxing</groupId>
+        <groupId>com.albusxing.mini</groupId>
         <artifactId>mini-register</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -17,10 +17,18 @@
     </properties>
 
     <dependencies>
+
         <dependency>
-            <groupId>com.albusxing</groupId>
+            <groupId>com.albusxing.mini</groupId>
             <artifactId>register-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.29</version>
+        </dependency>
+
     </dependencies>
 
 </project>
