--- a/register-server/pom.xml
+++ b/register-server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mini-register</artifactId>
-        <groupId>com.albusxing</groupId>
+        <groupId>com.albusxing.mini</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -33,7 +33,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.albusxing</groupId>
+            <groupId>com.albusxing.mini</groupId>
             <artifactId>register-core</artifactId>
         </dependency>
 
