--- a/register-core/pom.xml
+++ b/register-core/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>hutool-all</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.29</version>
+        </dependency>
+
 
     </dependencies>
 
